--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="putih">#ffffff</color>
     <color name="hitam">#000000</color>
+    <color name="merah">#FF0000</color>
 </resources>
