--- a/app/src/main/res/layout/activity_hasil.xml
+++ b/app/src/main/res/layout/activity_hasil.xml
@@ -29,17 +29,22 @@
             android:layout_height="wrap_content">
             <TextView
                 android:text="Skor"
+                android:textSize="30sp"
+                android:textColor="@color/hitam"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
                 android:id="@+id/tvSkorAkhir"
                 android:text="100"
+                android:textSize="50sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <Button
                 android:id="@+id/btHome"
-                android:text="Home"
-                android:layout_width="wrap_content"
+                android:text="Kembali Ke Home"
+                android:background="@color/colorPrimary"
+                android:textColor="@color/putih"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
