--- a/app/src/main/res/layout/activity_kuis.xml
+++ b/app/src/main/res/layout/activity_kuis.xml
@@ -1,32 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/putih"
+    android:background="@color/colorPrimary"
     android:orientation="vertical"
     tools:context=".KuisActivity">
-
+<LinearLayout
+    android:layout_margin="20dp"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
         android:layout_margin="10dp"
-        android:gravity="right"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nilai : "
+            android:textColor="@color/putih"
             android:textSize="18sp" />
 
         <TextView
+            android:layout_marginLeft="5dp"
             android:id="@+id/tvSkor"
-            android:layout_width="match_parent"
+            android:textColor="@color/putih"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="100"
+            android:textSize="18sp" />
+        <TextView
+            android:layout_marginLeft="20dp"
+            android:text="High Score Anda :"
+            android:textColor="@color/putih"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"/>
+        <TextView
+            android:layout_marginLeft="5dp"
+            android:id="@+id/tvHighScore"
+            android:layout_width="wrap_content"
+            android:text="0"
+            android:textColor="@color/putih"
+            android:layout_height="wrap_content"
             android:textSize="18sp" />
     </LinearLayout>
 
@@ -36,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:text="Sebutkan 3 nama negara Asia"
-        android:textColor="@color/hitam"
+        android:textColor="@color/putih"
         android:textSize="18sp" />
 
     <LinearLayout
@@ -52,12 +72,14 @@
 
             <RadioButton
                 android:id="@+id/rbA"
+                android:textColor="@color/putih"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"/>
+                android:textSize="18sp" />
 
             <RadioButton
                 android:id="@+id/rbB"
+                android:textColor="@color/putih"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp" />
@@ -66,28 +88,34 @@
                 android:id="@+id/rbC"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/putih"
                 android:textSize="18sp" />
 
             <RadioButton
                 android:id="@+id/rbD"
+                android:textColor="@color/putih"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp" />
 
             <RadioButton
                 android:id="@+id/rbE"
+                android:textColor="@color/putih"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Testing"
                 android:textSize="18sp" />
         </RadioGroup>
     </LinearLayout>
+
     <Button
-        android:layout_margin="10dp"
-        android:text="Submit"
-        android:textAllCaps="false"
-        android:layout_gravity="center_horizontal"
+        android:background="@color/putih"
         android:id="@+id/btSubmit"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="10dp"
+        android:text="Submit"
+        android:textAllCaps="false" />
 </LinearLayout>
+</RelativeLayout>
