--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,109 +5,119 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/colorPrimary"
-    android:gravity="center"
+    android:background="@drawable/kedua"
     tools:context=".HomeActivity">
+<androidx.core.widget.NestedScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_margin="10dp"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/money" />
+        <LinearLayout
+            android:id="@+id/layoutMateri"
+            android:layout_margin="5dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:src="@drawable/materi"
+                android:layout_width="50dp"
+                android:layout_height="50dp"/>
+            <TextView
+                android:layout_margin="10dp"
+                android:text="Materi"
+                android:textColor="@color/hijautua"
+                android:textSize="20sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/layoutVideo"
+            android:layout_margin="5dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:src="@drawable/video"
+                android:layout_width="50dp"
+                android:layout_height="50dp"/>
+            <TextView
+                android:layout_margin="10dp"
+                android:text="Video"
+                android:textColor="@color/hijautua"
+                android:textSize="20sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/layoutContohSoal"
+            android:layout_margin="5dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:src="@drawable/bank_soal"
+                android:layout_width="50dp"
+                android:layout_height="50dp"/>
+            <TextView
+                android:layout_margin="10dp"
+                android:text="Contoh Soal"
+                android:textColor="@color/hijautua"
+                android:textSize="20sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/layoutKuis"
+            android:layout_margin="5dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:src="@drawable/kuis"
+                android:layout_width="50dp"
+                android:layout_height="50dp"/>
+            <TextView
+                android:layout_margin="10dp"
+                android:text="Kuis"
+                android:textColor="@color/hijautua"
+                android:textSize="20sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/layoutKeluar"
+            android:layout_margin="5dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:src="@drawable/keluar"
+                android:layout_width="50dp"
+                android:layout_height="50dp"/>
+            <TextView
+                android:layout_margin="10dp"
+                android:text="Logout"
+                android:textColor="@color/hijautua"
+                android:textSize="20sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+    </LinearLayout>
+</androidx.core.widget.NestedScrollView>
 
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/money" />
-    <LinearLayout
-        android:id="@+id/layoutMateri"
-        android:layout_margin="5dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:src="@drawable/ic_book_black_24dp"
-            android:layout_width="50dp"
-            android:layout_height="50dp"/>
-        <TextView
-            android:layout_margin="10dp"
-            android:text="Materi"
-            android:textColor="@color/putih"
-            android:textSize="20sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/layoutVideo"
-        android:layout_margin="5dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:src="@drawable/ic_videocam_black_24dp"
-            android:layout_width="50dp"
-            android:layout_height="50dp"/>
-        <TextView
-            android:layout_margin="10dp"
-            android:text="Video"
-            android:textColor="@color/putih"
-            android:textSize="20sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/layoutContohSoal"
-        android:layout_margin="5dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:src="@drawable/ic_import_contacts_black_24dp"
-            android:layout_width="50dp"
-            android:layout_height="50dp"/>
-        <TextView
-            android:layout_margin="10dp"
-            android:text="Contoh Soal"
-            android:textColor="@color/putih"
-            android:textSize="20sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/layoutKuis"
-        android:layout_margin="5dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:src="@drawable/ic_description_black_24dp"
-            android:layout_width="50dp"
-            android:layout_height="50dp"/>
-        <TextView
-            android:layout_margin="10dp"
-            android:text="Kuis"
-            android:textColor="@color/putih"
-            android:textSize="20sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/layoutKeluar"
-        android:layout_margin="5dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:scaleX="-1"
-            android:src="@drawable/ic_exit_to_app_black_24dp"
-            android:layout_width="50dp"
-            android:layout_height="50dp"/>
-        <TextView
-            android:layout_margin="10dp"
-            android:text="Logout"
-            android:textColor="@color/putih"
-            android:textSize="20sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
 
 </LinearLayout>
