--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#B4F9F6</color>
+    <color name="colorPrimaryDark">#A6E4DD</color>
     <color name="colorAccent">#D81B60</color>
     <color name="putih">#ffffff</color>
     <color name="hitam">#000000</color>
     <color name="merah">#FF0000</color>
+    <color name="hijautua">#1B868C</color>
 </resources>
