--- a/app/src/main/res/layout/activity_hasil.xml
+++ b/app/src/main/res/layout/activity_hasil.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
     tools:context=".HasilActivity">
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <ImageView
         android:src="@drawable/finish"
         android:layout_width="200dp"
@@ -43,9 +52,11 @@
                 android:id="@+id/btHome"
                 android:text="Kembali Ke Home"
                 android:background="@color/colorPrimary"
-                android:textColor="@color/putih"
+                android:textColor="@color/hijautua"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+    </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 </RelativeLayout>
