--- a/app/src/main/res/layout/activity_kuis.xml
+++ b/app/src/main/res/layout/activity_kuis.xml
@@ -7,6 +7,9 @@
     android:background="@color/colorPrimary"
     android:orientation="vertical"
     tools:context=".KuisActivity">
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 <LinearLayout
     android:layout_margin="20dp"
     android:orientation="vertical"
@@ -22,13 +25,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nilai : "
-            android:textColor="@color/putih"
+            android:textColor="@color/hijautua"
             android:textSize="18sp" />
 
         <TextView
             android:layout_marginLeft="5dp"
             android:id="@+id/tvSkor"
-            android:textColor="@color/putih"
+            android:textColor="@color/hijautua"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="100"
@@ -36,7 +39,7 @@
         <TextView
             android:layout_marginLeft="20dp"
             android:text="High Score Anda :"
-            android:textColor="@color/putih"
+            android:textColor="@color/hijautua"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"/>
@@ -45,7 +48,7 @@
             android:id="@+id/tvHighScore"
             android:layout_width="wrap_content"
             android:text="0"
-            android:textColor="@color/putih"
+            android:textColor="@color/hijautua"
             android:layout_height="wrap_content"
             android:textSize="18sp" />
     </LinearLayout>
@@ -56,7 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:text="Sebutkan 3 nama negara Asia"
-        android:textColor="@color/putih"
+        android:textColor="@color/hijautua"
         android:textSize="18sp" />
 
     <LinearLayout
@@ -72,14 +75,14 @@
 
             <RadioButton
                 android:id="@+id/rbA"
-                android:textColor="@color/putih"
+                android:textColor="@color/hijautua"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp" />
 
             <RadioButton
                 android:id="@+id/rbB"
-                android:textColor="@color/putih"
+                android:textColor="@color/hijautua"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp" />
@@ -88,19 +91,19 @@
                 android:id="@+id/rbC"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/putih"
+                android:textColor="@color/hijautua"
                 android:textSize="18sp" />
 
             <RadioButton
                 android:id="@+id/rbD"
-                android:textColor="@color/putih"
+                android:textColor="@color/hijautua"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp" />
 
             <RadioButton
                 android:id="@+id/rbE"
-                android:textColor="@color/putih"
+                android:textColor="@color/hijautua"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Testing"
@@ -118,4 +121,5 @@
         android:text="Submit"
         android:textAllCaps="false" />
 </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 </RelativeLayout>
