--- a/app/src/main/res/layout/activity_hasil.xml
+++ b/app/src/main/res/layout/activity_hasil.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     <ImageView
-        android:src="@drawable/finish"
+        android:src="@mipmap/finish"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_centerInParent="true"
@@ -59,4 +59,9 @@
     </androidx.cardview.widget.CardView>
     </LinearLayout>
     </androidx.core.widget.NestedScrollView>
+    <ImageView
+        android:layout_alignParentBottom="true"
+        android:src="@mipmap/kedua"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"/>
 </RelativeLayout>
