--- a/app/src/main/res/layout/activity_list_video.xml
+++ b/app/src/main/res/layout/activity_list_video.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -25,27 +25,71 @@
         android:layout_margin="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-    <Button
+    <LinearLayout
         android:layout_margin="5dp"
-        android:background="@color/putih"
         android:id="@+id/btVideo1"
-        android:text="Video 1"
+        android:background="@color/hijautua"
+        android:orientation="horizontal"
         android:layout_width="200dp"
-        android:layout_height="wrap_content"/>
-    <Button
+        android:layout_height="60dp">
+        <ImageView
+            android:src="@mipmap/video"
+            android:layout_width="60dp"
+            android:layout_height="60dp"/>
+        <TextView
+            android:text="Video 1"
+            android:textSize="20sp"
+            android:textColor="@color/putih"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
+    <LinearLayout
         android:layout_margin="5dp"
-        android:background="@color/putih"
         android:id="@+id/btVideo2"
-        android:text="Video 2"
+        android:background="@color/hijautua"
+        android:orientation="horizontal"
         android:layout_width="200dp"
-        android:layout_height="wrap_content"/>
-    <Button
+        android:layout_height="60dp">
+        <ImageView
+            android:src="@mipmap/video"
+            android:layout_width="60dp"
+            android:layout_height="60dp"/>
+        <TextView
+            android:text="Video 2"
+            android:textSize="20sp"
+            android:textColor="@color/putih"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
+    <LinearLayout
         android:layout_margin="5dp"
-        android:background="@color/putih"
         android:id="@+id/btVideo3"
-        android:text="Video 3"
+        android:background="@color/hijautua"
+        android:orientation="horizontal"
         android:layout_width="200dp"
-        android:layout_height="wrap_content"/>
+        android:layout_height="60dp">
+        <ImageView
+            android:src="@mipmap/video"
+            android:layout_width="60dp"
+            android:layout_height="60dp"/>
+        <TextView
+            android:text="Video 3"
+            android:textSize="20sp"
+            android:textColor="@color/putih"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
     </LinearLayout>
     </androidx.core.widget.NestedScrollView>
-</LinearLayout>
+    <ImageView
+        android:layout_alignParentBottom="true"
+        android:src="@mipmap/kedua"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"/>
+</RelativeLayout>
