--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,10 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/awal"
+    android:background="@color/colorPrimary"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
     tools:context=".SplashActivity">
-
+<ImageView
+    android:src="@drawable/awal"
+    android:layout_width="300dp"
+    android:layout_height="300dp"/>
 </LinearLayout>
